--- a/FizzAPI/FizzAPI/appsettings.json
+++ b/FizzAPI/FizzAPI/appsettings.json
@@ -12,7 +12,7 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "Data Source=(local)\\sqlexpress01;Initial Catalog=OnionDb;Integrated Security=True",
+          "connectionString": "Data Source=(local)\\sqlexpress01;Initial Catalog=FizzDb;Integrated Security=True",
           "sinkOptionsSection": {
             "tableName": "Logs",
             "schemaName": "EventLogging",
@@ -23,20 +23,20 @@
       }
     ],
     "Properties": {
-      "Application": "Onion Architecture application"
+      "Application": "Fizz RESTful API application"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "OnionArchConn": "Data Source=(local)\\sqlexpress01;Initial Catalog=OnionDb;Integrated Security=True",
-    "IdentityConnection": "Data Source=(local)\\sqlexpress01;Initial Catalog=OnionDb;Integrated Security=True"
+    "FizzAPIConn": "Data Source=(local)\\sqlexpress01;Initial Catalog=FizzDb;Integrated Security=True",
+    "IdentityConnection": "Data Source=(local)\\sqlexpress01;Initial Catalog=FizzDb;Integrated Security=True"
   }, 
   "FeatureManagement": {
     "EnableEmailService": false
   },
   "MailSettings": {
-    "Mail": "amit.naik6226@gmail.com",
-    "DisplayName": "Amit Naik",
+    "Mail": "joshua.folivi@gmail.com",
+    "DisplayName": "Folivi Joshua",
     "Password": "YourGmailPassword",
     "Host": "smtp.gmail.com",
     "Port": 587
