--- a/FizzAPI/FizzAPI.Domain/FizzAPI.Domain.csproj
+++ b/FizzAPI/FizzAPI.Domain/FizzAPI.Domain.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\" />
+  </ItemGroup>
+
 </Project>
