--- a/FizzAPI/FizzAPI.Test.Unit/FizzAPI.Test.Unit.csproj
+++ b/FizzAPI/FizzAPI.Test.Unit/FizzAPI.Test.Unit.csproj
@@ -21,7 +21,7 @@
   <ItemGroup>
     <Folder Include="Controller\" />
     <Folder Include="Data\" />
-    <Folder Include="Service\" />
+    <Folder Include="Persistence\" />
   </ItemGroup>
 
 </Project>
